# libreflect

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: cmake.yml  release.yml
include/: reflect.h
src/: reflect_common.h
